force-app/main/default/objects/SurveyTemplate__c/SurveyTemplate__c.object-meta.xml
<CustomObject>
    <label>Survey Template</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>