force-app/main/default/objects/SurveyTemplate__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>