force-app/main/default/objects/SurveyTemplate__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>