force-app/main/default/objects/SurveyTemplate__c/fields/MultiSurvey__c.field-meta.xml
<CustomField>
    <fullName>MultiSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi survey</label>
    <type>Checkbox</type>
</CustomField>