force-app/main/default/objects/SurveyTemplate__c/fields/QuestionSearchOptions__c.field-meta.xml
<CustomField>
    <fullName>QuestionSearchOptions__c</fullName>
    <label>Question Search Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rated</fullName>
            </value>
            <value>
                <fullName>Not rated</fullName>
            </value>
            <value>
                <fullName>Rated in self-survey</fullName>
            </value>
            <value>
                <fullName>Rated by co-workers</fullName>
            </value>
            <value>
                <fullName>Rated in self-survey or by co-workers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>