force-app/main/default/objects/SurveyTemplate__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>Service Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>