force-app/main/default/objects/SurveyTemplate__c/fields/Submittable__c.field-meta.xml
<CustomField>
    <fullName>Submittable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submittable</label>
    <type>Checkbox</type>
</CustomField>