force-app/main/default/objects/SurveyTemplate__c/fields/SurveyHandler__c.field-meta.xml
<CustomField>
    <fullName>SurveyHandler__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Survey Handler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SurveyConfiguration__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Survey_Handler</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SurveyConfiguration__c</referenceTo>
    <relationshipLabel>Surveys Templates</relationshipLabel>
    <relationshipName>SurveysTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>