force-app/main/default/objects/SurveyTemplate__c/validationRules/checkDates.validationRule-meta.xml
<ValidationRule>
    <fullName>checkDates</fullName>
    <active>true</active>
    <errorConditionFormula>IF( (!ISBLANK(StartDate__c)  &amp;&amp;  !ISBLANK(EndDate__c)),  StartDate__c &gt; EndDate__c, FALSE)</errorConditionFormula>
    <errorMessage>Start date cannot be greater than end date</errorMessage>
</ValidationRule>